<resources>
    <string name="app_name">ASTRE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="want_to_take_note_for_your_daily_routines">Want to take note for your daily routines ?</string>
    <string name="notes">Notes</string>
    <string name="edit">Edit</string>
    <string name="img">img</string>
    <string name="uit_openremote">UIT OPEN REMOTE</string>
    <string name="discover_our_uit_iot_devices">Discover our Uit Iot Devices</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="your_username">Your username</string>
    <string name="register">Register</string>
    <string name="re_password">Re-password</string>
    <string name="password">Password</string>
    <string name="email_right_here">Email right here !</string>
    <string name="username">Username</string>
    <string name="log_in">Log in</string>
    <string name="logo">logo</string>
    <string name="id_and_version">ID AND VERSION</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet ?</string>
    <string name="textview">TextView</string>
    <string name="date_and_name">DATE AND NAME</string>
    <string name="public_read_and_parent_id">PUBLIC READ AND PARENT ID</string>
    <string name="realm_and_type">REALM AND TYPE</string>
    <string name="logo_img">logo_img</string>
    <string name="menu">MENU</string>
    <string name="log_out">Log out</string>
    <string name="time_table">Time table</string>
    <string name="asset_descriptors">Asset Descriptors</string>
    <string name="user_roles">User roles</string>
    <string name="weather_assets">Weather Assets</string>
    <string name="map_location">Map location</string>
    <string name="account">Account</string>
    <string name="more_details">More Details</string>
    <string name="_27">27</string>
    <string name="cloudy">Cloudy</string>
    <string name="overcast_clouds">Overcast clouds</string>
    <string name="_34_km_h">34 km/h</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="name">Name</string>
    <string name="type">Type:</string>
    <string name="icon">Icon:</string>
    <string name="colour">Colour:</string>
    <string name="name_and_roles">Name and Roles:</string>
    <string name="user">User</string>
    <string name="id">ID</string>
    <string name="description">Description:</string>
    <string name="composite">Composite:</string>
    <string name="assigned">Assigned:</string>
    <string name="descriptor_type">Descriptor type:</string>
    <string name="enter_your_subject">Enter your subject</string>
    <string name="enter_your_weekday">Enter your Weekday:</string>
    <string name="enter_begin_period">Enter Begin Period:</string>
    <string name="insert">Insert</string>
    <string name="weather">WEATHER</string>
    <string name="user_role">USER ROLES</string>
    <string name="map">MAP</string>
    <string-array name="day">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="start">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>

    </string-array>

</resources>