<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/one">

    <androidx.cardview.widget.CardView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="10dp"
        android:elevation="20dp"
        app:cardCornerRadius="40dp">

        <ImageView
            android:id="@+id/roundedImageView"
            android:layout_width="match_parent"
            android:contentDescription="@string/img"
            android:layout_height="match_parent"
            android:background="@drawable/back"
            android:scaleType="fitXY"
            android:scaleX="1"
            android:scaleY="1" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/bigfont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/mulish_extrabold"
        android:text="@string/uit_openremote"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp">

    </TextView>

    <TextView
        android:id="@+id/smallfont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bigfont"
        android:layout_centerVertical="true"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/mulish_light"
        android:text="@string/discover_our_uit_iot_devices"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp">

    </TextView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/smallfont"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/relativeborder"
        android:backgroundTint="@color/grey"
        android:backgroundTintMode="screen"
        android:paddingHorizontal="5dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signinbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/mulish_light"
            android:paddingHorizontal="50dp"
            android:paddingVertical="20dp"
            android:stateListAnimator="@null"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:cornerRadius="10dp">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerbtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/signinbtn"
            android:backgroundTint="@color/grey"
            android:fontFamily="@font/mulish_light"
            android:paddingHorizontal="50dp"
            android:paddingVertical="20dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:cornerRadius="10dp">
        </com.google.android.material.button.MaterialButton>
    </RelativeLayout>

</RelativeLayout>