<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/demo">

            <TextView
                android:id="@+id/asset_descriptor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/mulish_semibold"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_below="@+id/asset_descriptor_name"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:textStyle="bold"
                        android:text="@string/descriptor_type"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/asset_descriptor_type"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/descriptor_type"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:layout_marginStart="5dp"
                        android:text="@string/icon"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/asset_descriptor_icon"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/icon"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:layout_marginStart="5dp"
                        android:text="@string/colour"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/asset_descriptor_colour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:text="@string/colour"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>