<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:id="@+id/dialog"
    tools:context=".AssetActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <ImageView
            android:contentDescription="@string/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:paddingTop="5dp"
            android:scaleX="2"
            android:scaleY="2"
            android:src="@drawable/logo_nhom" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:paddingVertical="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/id_and_version"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_id"
            android:layout_width="30dp"
            android:layout_height="39dp"
            android:layout_below="@id/title1"
            android:contentDescription="@string/logo_img"
            android:src="@drawable/id" />

        <TextView
            android:id="@+id/asset_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title1"
            android:layout_toEndOf="@id/imgversion"
            android:paddingVertical="10dp"
            android:text="@string/textview"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp"/>

        <ImageView
            android:id="@+id/imgversion"
            android:layout_width="30dp"
            android:layout_height="39dp"
            android:layout_below="@id/asset_id"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/logo_img"

            android:src="@drawable/version" />

        <TextView
            android:id="@+id/asset_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/asset_id"
            android:layout_toEndOf="@id/imgversion"
            android:paddingVertical="10dp"
            android:text="@string/textview"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="87dp" />


        <TextView
            android:id="@+id/title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/asset_version"
            android:background="@color/teal_200"
            android:fontFamily="@font/mulish_semibold"
            android:paddingVertical="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/date_and_name"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgdate"
            android:layout_width="30dp"
            android:layout_height="39dp"
            android:contentDescription="@string/logo_img"

            android:layout_below="@id/title2"
            android:layout_marginEnd="10dp"
            android:src="@drawable/calendar" />

        <TextView
            android:id="@+id/asset_created_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title2"
            android:layout_toEndOf="@id/imgdate"
            android:paddingVertical="10dp"
            android:text="@string/textview"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="122dp" />

        <ImageView
            android:id="@+id/imgname"
            android:layout_width="30dp"
            android:layout_height="39dp"
            android:contentDescription="@string/logo_img"

            android:layout_below="@id/asset_created_on"
            android:layout_marginEnd="10dp"
            android:src="@drawable/name" />

        <TextView
            android:id="@+id/asset_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/asset_created_on"
            android:layout_toEndOf="@id/imgname"
            android:paddingVertical="10dp"
            android:text="@string/textview"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="122dp" />


        <TextView
            android:id="@+id/title3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/asset_name"
            android:background="@color/teal_200"
            android:fontFamily="@font/mulish_semibold"
            android:paddingVertical="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/public_read_and_parent_id"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgbook"
            android:layout_width="30dp"
            android:layout_height="39dp"
            android:layout_below="@id/title3"
            android:contentDescription="@string/logo_img"

            android:layout_marginEnd="10dp"
            android:src="@drawable/book" />

        <TextView
            android:id="@+id/asset_access_public_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title3"
            android:layout_toEndOf="@id/imgbook"
            android:paddingVertical="10dp"
            android:text="@string/textview"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="52dp" />

        <ImageView
            android:id="@+id/imgparentid"
            android:layout_width="30dp"
            android:layout_height="39dp"
            android:contentDescription="@string/logo_img"

            android:layout_below="@id/asset_access_public_read"
            android:layout_marginEnd="10dp"
            android:src="@drawable/id" />

        <TextView
            android:id="@+id/asset_parent_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/asset_access_public_read"
            android:layout_toEndOf="@id/imgparentid"
            android:paddingVertical="10dp"
            android:text="@string/textview"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="52dp" />


        <TextView
            android:id="@+id/title4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/asset_parent_id"
            android:background="@color/teal_200"
            android:fontFamily="@font/mulish_semibold"
            android:paddingVertical="5dp"
            android:layout_marginStart="12dp"
            android:text="@string/realm_and_type"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgrealm"
            android:layout_width="30dp"
            android:layout_height="39dp"
            android:contentDescription="@string/logo_img"

            android:layout_below="@id/title4"
            android:layout_marginEnd="10dp"
            android:src="@drawable/realm" />

        <TextView
            android:id="@+id/asset_realm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title4"
            android:layout_toEndOf="@id/imgrealm"
            android:paddingVertical="10dp"
            android:text="@string/textview"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="52dp" />

        <ImageView
            android:id="@+id/imgtype"
            android:layout_width="30dp"
            android:layout_height="39dp"
            android:contentDescription="@string/logo_img"

            android:layout_below="@id/asset_realm"
            android:layout_marginEnd="10dp"
            android:src="@drawable/type" />

        <TextView
            android:id="@+id/asset_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/asset_realm"
            android:layout_toEndOf="@id/imgtype"
            android:paddingVertical="10dp"
            android:text="@string/textview"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="52dp" />

        <ImageView
            android:id="@+id/imgpath"
            android:layout_width="30dp"
            android:layout_height="39dp"
            android:contentDescription="@string/logo_img"

            android:layout_below="@id/imgtype"
            android:layout_marginEnd="10dp"
            android:src="@drawable/path" />

        <TextView
            android:id="@+id/asset_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/asset_type"
            android:layout_toEndOf="@id/imgpath"
            android:paddingVertical="10dp"
            android:text="@string/textview"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="52dp" />


    </RelativeLayout>


</LinearLayout>