<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/bottom_dialog"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="14dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/img"
            android:paddingTop="5dp"
            android:scaleX="2"
            android:scaleY="2"
            android:src="@drawable/logo_nhom" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:paddingVertical="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/id_and_version"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageView
            android:contentDescription="@string/img"
            android:id="@+id/img_id"
            android:layout_width="30dp"
            android:layout_height="39dp"
            android:layout_below="@id/title1"
            android:src="@drawable/id" />

        <TextView
            android:id="@+id/asset_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title1"
            android:layout_toEndOf="@id/imgversion"
            android:paddingVertical="10dp"
            android:text="@string/textview"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp"/>

        <ImageView
            android:contentDescription="@string/img"
            android:id="@+id/imgversion"
            android:layout_width="30dp"
            android:layout_height="39dp"
            android:layout_below="@id/asset_id"
            android:layout_marginEnd="10dp"
            android:src="@drawable/version" />

        <TextView
            android:id="@+id/asset_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/asset_id"
            android:layout_toEndOf="@id/imgversion"
            android:paddingVertical="10dp"
            android:text="@string/textview"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="87dp" />


        <TextView
            android:id="@+id/title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/asset_version"
            android:background="@color/teal_200"
            android:paddingVertical="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/date_and_name"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageView
            android:contentDescription="@string/img"
            android:id="@+id/imgdate"
            android:layout_width="30dp"
            android:layout_height="39dp"
            android:layout_below="@id/title2"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_baseline_calendar_month_24" />

        <TextView
            android:id="@+id/asset_created_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title2"
            android:layout_toEndOf="@id/imgdate"
            android:paddingVertical="10dp"
            android:text="@string/textview"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="122dp" />

        <ImageView
            android:contentDescription="@string/img"
            android:id="@+id/imgname"
            android:layout_width="30dp"
            android:layout_height="39dp"
            android:layout_below="@id/asset_created_on"
            android:layout_marginEnd="10dp"
            android:src="@drawable/name" />

        <TextView
            android:id="@+id/asset_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/asset_created_on"
            android:layout_toEndOf="@id/imgname"
            android:paddingVertical="10dp"
            android:text="@string/textview"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="122dp" />


        <TextView
            android:id="@+id/title3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/asset_name"
            android:background="@color/teal_200"
            android:paddingVertical="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/public_read_and_parent_id"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageView
            android:contentDescription="@string/img"
            android:id="@+id/imgbook"
            android:layout_width="30dp"
            android:layout_height="39dp"
            android:layout_below="@id/title3"
            android:layout_marginEnd="10dp"
            android:src="@drawable/book" />

        <TextView
            android:id="@+id/asset_access_public_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title3"
            android:layout_toEndOf="@id/imgbook"
            android:paddingVertical="10dp"
            android:text="@string/textview"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="52dp" />

        <ImageView
            android:contentDescription="@string/img"
            android:id="@+id/imgparentid"
            android:layout_width="30dp"
            android:layout_height="39dp"
            android:layout_below="@id/asset_access_public_read"
            android:layout_marginEnd="10dp"
            android:src="@drawable/id" />

        <TextView
            android:id="@+id/asset_parent_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/asset_access_public_read"
            android:layout_toEndOf="@id/imgparentid"
            android:paddingVertical="10dp"
            android:text="@string/textview"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="52dp" />


        <TextView
            android:id="@+id/title4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/asset_parent_id"
            android:background="@color/teal_200"
            android:paddingVertical="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/realm_and_type"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageView
            android:contentDescription="@string/img"
            android:id="@+id/imgrealm"
            android:layout_width="30dp"
            android:layout_height="39dp"
            android:layout_below="@id/title4"
            android:layout_marginEnd="10dp"
            android:src="@drawable/realm" />

        <TextView
            android:id="@+id/asset_realm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title4"
            android:layout_toEndOf="@id/imgrealm"
            android:paddingVertical="10dp"
            android:text="@string/textview"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="52dp" />

        <ImageView
            android:contentDescription="@string/img"
            android:id="@+id/imgtype"
            android:layout_width="30dp"
            android:layout_height="39dp"
            android:layout_below="@id/asset_realm"
            android:layout_marginEnd="10dp"
            android:src="@drawable/type" />

        <TextView
            android:id="@+id/asset_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/asset_realm"
            android:layout_toEndOf="@id/imgtype"
            android:paddingVertical="10dp"
            android:text="@string/textview"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="52dp" />

<!--        <ImageView-->
<!--            android:contentDescription="@string/img"-->
<!--            android:id="@+id/imgpath"-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="39dp"-->
<!--            android:layout_below="@id/imgtype"-->
<!--            android:layout_marginEnd="10dp"-->
<!--            android:src="@drawable/path" />-->

<!--        <TextView-->
<!--            android:id="@+id/asset_path"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@id/asset_type"-->
<!--            android:layout_toEndOf="@id/imgpath"-->
<!--            android:paddingVertical="10dp"-->
<!--            android:text="@string/textview"-->
<!--            tools:layout_editor_absoluteX="16dp"-->
<!--            tools:layout_editor_absoluteY="52dp" />-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/asset_type"
            android:layout_alignParentEnd="true"
            android:text="@string/more_details"
            android:id="@+id/btn_more"/>

    </RelativeLayout>


</LinearLayout>